Phase H5: web source-verify the public-spec residuals (JEP/ISO) — bounded pass
WebSearch against official sources (openjdk.org/jeps, iso.org) for the highest-
confidence web-resolvable residuals; resolved the within-pin ones, confirmed the
preview ones (kept AHEAD-OF-PIN), left the rest flagged. Nothing invented.
- JEP 358 Helpful NPEs: confirmed Java 14, on-by-default since 15 (JDK-8233014) =>
  WITHIN the 21 anchor. RESOLVED in Ch11 + Ch12 drafts (+ openjdk cite); flags
  11_jep358 + 12_jep358 item1 RESOLVED.
- ISO/IEC 25010:2023 top-level (9 chars; Safety added; Usability->Interaction
  Capability; Portability->Flexibility): CONFIRMED (iso.org). Top-level stays fact;
  finer sub-names (maturity->faultlessness) still verify-at-pin (paid standard text).
- JEP 467 (markdown doc-comments, Java 23), JEP 401 (value classes, preview), JEP 505
  (structured concurrency, 5th preview, 25), JEP 507 (primitive patterns, preview):
  number+title+status CONFIRMED; KEPT AHEAD-OF-PIN (past 21).
check_snippets Ch11 7/7, Ch12 9/9. Also regenerated all scoring packets so they carry
the H2-H5 lifted/fixed text.

The remaining ~180 residuals (pinned-tool-doc defaults, SaaS-rolling rule severities,
copyrighted-book verbatims, env-gated REPRO) need a networked /pin-source + the books +
networked Maven -- not web-resolvable here. drift clean.

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01Vn3iMLjGTQuUJJBaz5q8yp